[package]
name = "cgroup-sys"
version = "0.1.0"
authors = ["Jimmi Dyson <jimmidyson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "FFI bindings to libcgroup"
repository = "https://github.com/jimmidyson/rcm"

build = "src/build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
