[package]
name = "libcgroup-sys"
version = "0.3.1-pre"
authors = ["Jimmi Dyson <jimmidyson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "FFI bindings to libcgroup"
repository = "https://github.com/jimmidyson/rcm"

build = "build.rs"

[dependencies]
libc = "0.2"

[dev-dependencies]
procinfo = "0.2"
