[package]
name = "libcgroup-sys"
version = "0.3.0"
authors = ["Jimmi Dyson <jimmidyson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "FFI bindings to libcgroup"
repository = "https://github.com/jimmidyson/rcm"

build = "build.rs"

[features]
# No dependencies, only used to run tests that require nightly rust.
nightly = ["procinfo"]

[dependencies]
libc = "0.2"
procinfo = { version = "0.2", optional = true }
