[package]
name = "libcgroup"
version = "0.2.0"
authors = ["Jimmi Dyson <jimmidyson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "libcgroup bindings"
repository = "https://github.com/jimmidyson/rust-libcgroup"

[dependencies]
libcgroup-sys = { path = "../libcgroup-sys", version = "0.2.0"}
